# qq-music-api

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/: curl.ixx  yuri_log.hpp
include/api/: play_list.hpp  song.hpp
include/api_results/: play_list_result.ixx  song_result.ixx
include/modules/: curl.ixx  global_config.ixx  nodejs.ixx  thread_pool.ixx
include/utils/: json_utils.hpp
json-format/: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
json-format/src/: App.vue  main.ts
json-format/src/assets/: main.css
script/: crypto_util.js
